--- a/src/css/PlaylistList.module.css
+++ b/src/css/PlaylistList.module.css
@@ -1,11 +1,14 @@
 .playlistListContainer {
-    border: 1px solid #ccc;
-    padding: 20px;
-    margin-top: 20px;
+    width: 100%;
+    padding: 0;
+    margin-bottom: 20px;
   }
   
-  .playlistListContainer h2 {
+.playlistListContainer h2 {
     font-size: 1.5em;
     margin-bottom: 10px;
+    color: #00e0ff;
+    border-bottom: 1px solid rgba(0,224,255,0.3);
+    padding-bottom: 5px;
   }
-  
+
