--- a/src/css/PlaylistListItem.module.css
+++ b/src/css/PlaylistListItem.module.css
@@ -1,11 +1,12 @@
 .playlistItem {
     padding: 10px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #444;
     cursor: pointer;
+    transition: background-color 0.3s ease;
+    color: #fff;
   }
   
-  .playlistItem:hover {
-    background-color: #f0f0f0;
+.playlistItem:hover {
+    background-color: rgba(0, 224, 255, 0.1);
   }
-  
-  
+
