--- a/src/css/Track.module.css
+++ b/src/css/Track.module.css
@@ -1,29 +1,29 @@
 .Track {
-  border-bottom: 1px solid #333;
   padding: 10px 0;
+  border-bottom: 1px solid #444;
+  width: 100%;
 }
-
 
 .trackDetails {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
 }
 
 .trackDetails h3 {
   margin: 0;
-  color: #00e0ff; 
+  color: #00e0ff;
+  font-size: 1.1em;
 }
 
 .trackDetails p {
   margin: 2px 0;
+  font-size: 0.9em;
+  color: #ccc;
 }
-
 
 .previewContainer {
   margin: 10px 0;
 }
-
 
 .previewButton {
   background-color: transparent;
@@ -31,7 +31,7 @@
   color: #00e0ff;
   padding: 8px 16px;
   border-radius: 4px;
-  font-size: 1em;
+  font-size: 0.9em;
   transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -41,7 +41,6 @@
   box-shadow: 0 0 8px #00e0ff;
 }
 
-
 .addButton,
 .removeButton {
   margin-top: 10px;
@@ -50,7 +49,7 @@
   color: #121212;
   padding: 8px 16px;
   border-radius: 4px;
-  font-size: 1em;
+  font-size: 0.9em;
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
